<resources>
    <string name="nohptujuan" translatable="false">Nomor Handphone Tujuan</string>
    <string name="id_empty_mdn_input" translatable="false">Harap masukkan nomor handphone</string>
    <string name="id_invalid_mdn_input" translatable="false">Nomor handphone yang Anda masukkan harus 10&#8211;14 angka</string>
    <string name="jumlah" translatable="false">Jumlah</string>
    <string name="mpin" translatable="false">mPIN</string>
    <string name="transfer_emoney" translatable="false">Transfer - E-money</string>
    <string name="rp" translatable="false">Rp.</string>
    <string name="bank_sinarmas" translatable="false">Bank Sinarmas</string>
    <string name="bank_lainnya" translatable="false">Bank Lainnya</string>
    <string name="uangku" translatable="false">Uangku</string>
    <string name="emoney" translatable="false">E-money</string>
    <string name="phone_contact_1">1500153</string>
    <string name="phone_contact_2">(021) 50188888</string>
    <string name="email_contact" translatable="false">care@banksinarmas.com</string>
    <string name="website_contact" translatable="false">www.banksinarmas.com</string>
    <string name="string_eula"><html><p>1. Pay by QR merupakan layanan pembayaran berbasis kode QR atas pembelanjaan di pedagang/merchant yang berpartisipasi, dimana dalam pelaksanaannya pengguna Simaspay melakukan pemindaian kode QR uang tersedia pada pedagang/merchant menggunakan aplikasi Simaspay.</p><p>2. Segala ketentuan mengenai layanan pembayaran pedagang/merchant dengan Pay by QR mengacu kepada Syarat dan Ketentuan Penggunaan Aplikasi Simaspay.</p></html>
</string>
    <string-array name="bahasa_transfer_array">
        <item>Bank Sinarmas</item>
        <item>Bank Lainnya</item>
        
        <item>E-money</item>
    </string-array>
    <string-array name="withdraw_array">
        <item>Untuk Saya</item>
        <item>Untuk Orang Lain</item>å
    </string-array>
    <string name="en_full_name">Full name</string>
    <string name="en_email_address">Email address</string>
    <string name="en_phonenumber">Phone number</string>
    <string name="id_phonenumber">Nomor handphone</string>
    <string name="en_mpin">mPIN</string>
    <string name="id_no_inetconnectivity">Tidak ada koneksi internet</string>
    <string name="en_no_inetconnectivity">No internet connectivity</string>
    <string name="id_invalid_name">Harap masukkan Nama lengkap Anda</string>
    <string name="en_invalid_name">Harap masukkan Nama lengkap Anda</string>
    <string name="id_empty_mpin">Harap masukkan mPIN Anda</string>
    <string name="id_empty_confmpin">Harap masukkan Konfirmasi mPIN Anda</string>
    <string name="id_invalid_mpin">mpin harus 6 digit</string>
    <string name="en_invalid_mpin">mpin harus 6 digit</string>
    <string name="id_checksame_mpin">Konfirmasi mPin harus sama dengan mPIN</string>
    <string name="en_checksame_mpin">Konfirmasi mPin harus sama dengan mPIN</string>
    <string name="id_waiting_sms_lbl">Menunggu SMS Kode Verifikasi di Nomor </string>
    <string name="en_waiting_sms_lbl">Waiting verification code SMS to the number </string>
    <string name="id_invalid_email">Format email salah</string>
    <string name="en_invalid_email">Format email salah</string>
    <string name="en_confirmation_mpin">Confirmation mPIN</string>
    <string name="id_confirmation_mpin">Konfirmasi mPIN</string>
    <string name="en_validation_mpin">mPIN should have not the same or sequence number</string>
    <string name="id_validation_mpin">mPIN tidak boleh berupa angka yang sama atau berurutan</string>
    <string name="en_validation_confmpin">mPIN Confirmation should have not the same or sequence number</string>
    <string name="id_validation_confmpin">Konfirmasi mPIN tidak boleh berupa angka yang sama atau berurutan</string>
    <string name="daftar">Daftar</string>
    <string name="benar">Benar</string>
    <string name="salah">Salah</string>
    <string name="en_security_questions">Pilih Pertanyaan Keamanan</string>
    <string name="en_success_dialog">Pendaftaran Berhasil!\n\nSelamat, Anda berhasil membuat akun e-money Simaspay</string>
    <string name="en_security_answer">Jawaban Anda</string>
    <string name="id_authentication_failed">Proses otentifikasi gagal. Silahkan coba lagi</string>
    <string name="en_authentication_failed">Authentification process failed. Please try again</string>
    <string name="id_tolak">Tolak</string>
    <string name="id_setuju">Setuju</string>
    <string name="id_batal">Batal</string>
    <string name="id_kirim">Kirim</string>
    <string name="id_transfer">Transfer</string>
    <string name="id_pilih_foto">Silahkan ambil Foto dari:</string>
    <string name="id_crop_foto">Crop foto menggunakan:</string>
    <string name="id_no_hp_validation_msg">Nomor Handphone yang Anda masukkan harus 10&#8211;14 angka</string>
    <string name="id_jumlah_transfer_validation">Harap masukkan jumlah yang ingin Anda transfer</string>
    <string name="id_masukkan_no_hp">Harap masukkan Nomor Handphone Tujuan</string>
    <string name="id_masukkan_mpin">Harap masukkan mPIN Anda</string>
    <string name="id_no_rek_validation_msg">Nomor rekening yang Anda masukkan harus 10&#8211;14 angka</string>
    <string name="id_camera">Kamera</string>
    <string name="id_pick_image">Pilih Foto</string>
    <string name="id_galeri">Galeri Foto</string>
    <string name="waiting_sms">Mohon Menunggu</string>
    <string name="timeout">Timeout</string>
    <string name="kosong">Kosong</string>
    <string name="id_empty_billpaymentamount">Silahkan masukkan jumlah yang ingin Dibayarkan</string>
    <string name="waiting_sms_2">Kami sedang melakukan\nverifikasi kode secara otomatis</string>
    <string name="unreadable_sms">SMS tidak terbaca secara otomatis?</string>
    <string name="btn_sms_manual">Masukkan Kode secara manual</string>
    <string name="manual_input">Input Manual Kode Verifikasi</string>
    <string name="_6_digit_kode_otp">4 digit kode verifikasi</string>
    <string name="_00_00">00:00</string>
    <string name="lanjut">Lanjut</string>
    <string name="debit">debit</string>
    <string name="credit">credit</string>
    <string name="mutasi">Mutasi</string>
    <string name="select_image">Select Image</string>
    <string name="phoneinput_label">Silahkan masukkan Nomor Handphone Anda</string>
    <string name="aktivasi_label">Sudah memiliki kode aktivasi?</string>
    <string name="aktivasi_akun">Aktivasi Akun</string>
    <string name="eng_otprequired_title">Code Verification</string>
    <string name="id_notif_success_mpin">mPIN Berhasil Diubah</string>
    <string name="eng_otprequired_desc_1">Please wait while we are doing automatic code verification to the number : </string>
    <string name="eng_otprequired_desc_2"> or please enter the code manually if automatic verification is failed.</string>
    <string name="eng_otpfailed">Code Verification Failed</string>
    <string name="id_otp_empty_failed">Kode OTP tidak boleh kosong. Silakan masukkan kode OTP</string>
    <string name="en_otp_empty_failed">OTP code cannot be empty. Please input the OTP code</string>
    <string name="eng_desc_otpfailed">Please enter the code within specified time limit."</string>
    <string name="eng_incorrectotp">You have entered incorrect code. Please try again and ensure that you  enter the correct code.</string>
    <string name="bahasa_otprequired_title">Code Verification</string>
    <string name="bahasa_otprequired_desc_1">Please wait while we are doing automatic code verification to the number : </string>
    <string name="bahasa_otprequired_desc_2"> or please enter the code manually if automatic verification is failed.</string>
    <string name="bahasa_otpfailed">Verifikasi kode gagal</string>
    <string name="bahasa_desc_otpfailed">Silakan masukkan code sebelum batas waktu yang ditentukan</string>
    <string name="bahasa_incorrectotp">Anda telah memasukkan kode yang salah. Silakan mencoba kembali dan pastikan kode yang anda masukkan benar</string>
    <string name="empty" />
    <string name="fragment_fidelitiz_btn_your_programs">My programs</string>
    <string name="fragment_fidelitiz_btn_all_programs">All programs</string>
    <string name="fragment_fidelitiz_btn_search_placeholder">SEARCH</string>
    <string name="fragment_fidelitiz_terms_of_use_start">To use Flashiz Rewards</string>
    <string name="fragment_fidelitiz_terms_of_use_conditions">Accept the terms and conditions</string>
    <string name="fragment_fidelitiz_terms_of_use_add_programs">And join your first loyalty program!</string>
    <string name="fragment_fidelitiz_terms_of_use_accept">Accept</string>
    <string name="fragment_cgu_title">Terms and conditions</string>
    <string name="fragment_fidelitiz_all_programs_gps_popup_title">Activation of GPS</string>
    <string name="fragment_fidelitiz_all_programs_gps_popup_describe">GPS is not activated, do you want to access your settings?</string>
    <string name="fragment_fidelitiz_all_programs_private_title">Program by invitation</string>
    <string name="fragment_fidelitiz_all_programs_private_describe">"Please enter your member's code"</string>
    <string name="fragment_fidelitiz_btn_join_trial_account">"To join a program you need to fill in your personal information and then accept Flashiz Rewards' terms and conditions."</string>
    <string name="fragment_fidelitiz_your_programs_number_of_coupon">coupon worth</string>
    <string name="fragment_fidelitiz_your_programs_number_of_coupons">coupons worth</string>
    <string name="fragment_fidelitiz_your_programs_before_a_coupon">Only 1 point</string>
    <string name="fragment_fidelitiz_your_programs_before_coupons">Only %s points</string>
    <string name="fragment_fidelitiz_your_programs_number_of_point">Point</string>
    <string name="fragment_fidelitiz_your_programs_number_of_points">Points</string>
    <string name="fragment_fidelitiz_your_programs_number_of_points_zero">Point</string>
    <string name="fragment_fidelitiz_your_programs_amount_saved">saved</string>
    <string name="fragment_fidelitiz_your_programs_amount_popup_title">Delete</string>
    <string name="fragment_fidelitiz_your_programs_amount_popup_describe">Do you want to delete this loyalty card?</string>
    <string name="engine_fidelitiz_point_cash">Get %1$s point for every %2$s spent.</string>
    <string name="engine_fidelitiz_points_cash">Get %1$s points for every %2$s spent.</string>
    <string name="engine_fidelitiz_point_payment">Get %1$s points per purchase.</string>
    <string name="engine_fidelitiz_points_payment">Get %1$s points per purchase.</string>
    <string name="engine_fidelitiz_percent_payment">Get %s reduction for each payment.</string>
    <string name="engine_fidelitiz_point_cash_get">Collect %1$s point to get a coupon worth %2$s.</string>
    <string name="engine_fidelitiz_points_cash_get">Collect %1$s points to get a coupon worth %2$s.</string>
    <string name="engine_fidelitiz_point_percent">Collect %1$s point to get a discount coupon worth %2$s</string>
    <string name="engine_fidelitiz_points_percent">Collect %1$s points to get a discount coupon worth %2$s</string>
    <string name="jumlah_value">Rp 2.500.000</string>
    <string name="label_konfirmasi">Pastikan data berikut sudah benar</string>
    <string name="nama_pemilik_rekening">Nama Pemilik Rekening</string>
    <string name="notice">*Nomor ini belum terdaftar sebagai e-money user. Kami akan mengirimkan SMS panduan download Simaspay E-money ke nomor tujuan.</string>
    <string name="id_nomor_handphone">Nomor Handphone</string>
    <string name="pastikan_data_berikut_sudah_benar">Pastikan data berikut sudah benar</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="hubungi_kami">Hubungi Kami</string>
    <string name="simas">simas</string>
    <string name="pay">pay</string>
    <string name="login_atau_daftar">Login atau Daftar</string>
</resources>