<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/simas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:text="@string/simas"
            android:visibility="gone"
            android:textColor="#CC0001"
            android:textSize="65sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:text="@string/pay"
            android:visibility="gone"
            android:textColor="@color/background_material_dark"
            android:textSize="65sp"
            android:textStyle="bold"
            tools:ignore="PrivateResource" />
    </LinearLayout>


    <TextView
        android:id="@+id/contact_us"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/hubungi_kami"
        android:layout_alignParentBottom="true"
        android:textColor="#5b5b5b"
        android:layout_marginBottom="35dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/activation"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:background="@drawable/color_gray"
        android:text="@string/aktivasi_akun"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_above="@+id/contact_us"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/login_color_red"
        android:text="@string/login_atau_daftar"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:layout_marginBottom="12dp"
        android:layout_above="@+id/activation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:src="@mipmap/logo_simaspay"
        android:layout_marginTop="73dp"
        android:layout_below="@+id/layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>