<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/details_background"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@color/reg"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/back_layout"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:src="@drawable/btn_back_register" />
        </LinearLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/konfirmasi"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@drawable/white_color"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="275dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:gravity="start|center"
                    android:text="@string/pastikan_data_berikut_sudah_benar"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginTop="20dp"
                    android:gravity="start|center"
                    android:text="@string/nama_pemilik_rekening"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/name_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginTop="5dp"
                    android:gravity="start|center"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginTop="20dp"
                    android:gravity="start|center"
                    android:text="@string/id_nomor_handphone"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/number_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginTop="5dp"
                    android:gravity="start|center"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginTop="20dp"
                    android:gravity="start|center"
                    android:text="@string/jumlah"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/amount_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginTop="5dp"
                    android:gravity="start|center"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/products"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginTop="20dp"
                    android:gravity="start|center"
                    android:text="Produk yang Diinginkan"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/other_products"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginTop="5dp"
                    android:gravity="start|center"
                    android:text="Lainnya - Deposito"
                    android:lineSpacingMultiplier="1.1"
                    android:lineSpacingExtra="0dp"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <View
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height="3dip"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/line"
                    android:layerType="software"
                    android:visibility="gone"
                    android:orientation="vertical" />

                <TextView
                    android:id="@+id/total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginTop="15dp"
                    android:gravity="start|center"
                    android:visibility="gone"
                    android:text="Total Pendebitan"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/total_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginTop="5dp"
                    android:gravity="start|center"
                    android:text=""
                    android:visibility="gone"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />


            </LinearLayout>
    </ScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="220dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_color_red"
        android:gravity="center"
        android:text="@string/benar"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="220dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/color_cement"
        android:gravity="center"
        android:text="@string/salah"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp" />
</LinearLayout>